2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Conversation.cs: Changed GetReceivedMessages() so it doesn't
	  return null.  Just return a blank array if there are no messages

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/PersonGroup.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/ChatWindow.cs, Banter/PersonStore.cs,
	  Banter/GroupWindow.cs, Banter/PersonManager.cs,
	  Banter/PersonSync.cs, Banter/Makefile.am: Renamed PersonStore to
	  PersonManager
	* Banter/ProviderUserManager.cs: Moved the GetMe call to a Me property

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs, Banter/Conversation.cs: Added code to retrieve
	  pending messages when receiving a chat start

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUserManager.cs: Added a static method to get all
	  ProviderUser objects which are flagged as me

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Removed all references to Tapioca
	* Banter/Conversation.cs: Removed reference to TapiocaConnection

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Commented out DisconnectHandlers() temporarily. 
	  It's trapping and thus preventing the closing of our telepathy
	  connection

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: added presence debug messages

2007-05-23  Brady Anderson <banderso@novell.com> 

	* Banter.mdp, Banter/AccountManagement.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/Person.cs, Banter/ChatWindow.cs,
	  Banter/ProviderUserManager.cs, Banter/ProviderUser.cs,
	  Banter/Makefile.am, Banter/Conversation.cs: Major changes to talk
	  directly to telepathy-sharp rather than tapioca-sharp.  All the
	  tapioca calling code has not been removed yet.

2007-05-23  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Makefile.am: Renamed CLEAN_FILES to CLEANFILES so that make
	  clean would work.
